Melhoria grafica e outras pequenas alteracoes